eclipse/src/giki/antlr4/GikiParser.java
// Generated from C:\Users\Jakob\Dropbox\Eclipse\workspace\Giki 0.0.4\src\giki\antlr4\Giki.g4 by ANTLR 4.1
package giki.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GikiParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMA=1, AT=2, HASH=3, DOUBLE_PLUS=4, CONSUMPTION_STRING=5, PRODUCTION_STRING=6, 
		CONSUMPTION_INT=7, PRODUCTION_INT=8, IO_SCOPE=9, SINGLE_QUOTE=10, EXCLAMATION=11, 
		CARET=12, PATH_SEPARATOR=13, DOUBLE_DOT=14, SEMICOLON=15, NAMED_PRIMITIVE_RETURN=16, 
		NAMED_PRIMITIVE_VARIABLES=17, NAMED_PRIMITIVE_EOF=18, NAMED_PRIMITIVE_NIL=19, 
		KEYWORD_DEFINE=20, KEYWORD_USE=21, KEYWORD_FROM=22, KEYWORD_TO=23, KEYWORD_VAR=24, 
		KEYWORD_REST=25, KEYWORD_GOTO=26, KEYWORD_FILE=27, PIPELINE=28, PIPELINE_FROM=29, 
		PIPELINE_TO=30, PIPE=31, UNDERSCORE=32, ASTERIX=33, PRECEDENCE_OPERATOR=34, 
		COLON=35, DOT=36, EQUALS=37, OPEN_SQ_BRACKET=38, CLOSE_SQ_BRACKET=39, 
		OPEN_PARENTHESIS=40, CLOSE_PARENTHESIS=41, OPEN_BRACKET=42, CLOSE_BRACKET=43, 
		KW_IF=44, ID=45, WS=46, SINGLELINE_COMMENT=47, MULTI_LINE_COMMENT=48, 
		VERBATIM=49;
	public static final String[] tokenNames = {
		"<INVALID>", "','", "'@'", "'#'", "'++'", "CONSUMPTION_STRING", "PRODUCTION_STRING", 
		"CONSUMPTION_INT", "PRODUCTION_INT", "IO_SCOPE", "'''", "'!'", "'^'", 
		"'::'", "'..'", "';'", "'ret'", "'vars'", "'eof'", "'nil'", "'def'", "'use'", 
		"'from'", "'to'", "'var'", "'rest'", "'goto'", "'file'", "PIPELINE", "PIPELINE_FROM", 
		"PIPELINE_TO", "'|'", "'_'", "'*'", "PRECEDENCE_OPERATOR", "':'", "'.'", 
		"'='", "'['", "']'", "'('", "')'", "'{'", "'}'", "'if'", "ID", "WS", "SINGLELINE_COMMENT", 
		"MULTI_LINE_COMMENT", "VERBATIM"
	};
	public static final int
		RULE_program = 0, RULE_programElements = 1, RULE_module = 2, RULE_moduleModifiers = 3, 
		RULE_expressions = 4, RULE_expression = 5, RULE_variableDeclaration = 6, 
		RULE_assignment = 7, RULE_decision = 8, RULE_decisionTail = 9, RULE_pipeline = 10, 
		RULE_pipelineFrom = 11, RULE_pipelineInter = 12, RULE_pipelineTo = 13, 
		RULE_preFixOperation = 14, RULE_preFixRest = 15, RULE_preFixFile = 16, 
		RULE_compose = 17, RULE_terms = 18, RULE_term = 19, RULE_termValue = 20, 
		RULE_lookupChain = 21, RULE_interval = 22, RULE_slotSet = 23, RULE_group = 24, 
		RULE_list = 25, RULE_map = 26, RULE_ioOperation = 27, RULE_identifier = 28, 
		RULE_matchID = 29, RULE_consumeString = 30, RULE_produceString = 31, RULE_consumeInteger = 32, 
		RULE_produceInteger = 33, RULE_namedPrimitive = 34, RULE_move = 35, RULE_peek = 36, 
		RULE_next = 37, RULE_label = 38, RULE_produceVerbatim = 39, RULE_quote = 40;
	public static final String[] ruleNames = {
		"program", "programElements", "module", "moduleModifiers", "expressions", 
		"expression", "variableDeclaration", "assignment", "decision", "decisionTail", 
		"pipeline", "pipelineFrom", "pipelineInter", "pipelineTo", "preFixOperation", 
		"preFixRest", "preFixFile", "compose", "terms", "term", "termValue", "lookupChain", 
		"interval", "slotSet", "group", "list", "map", "ioOperation", "identifier", 
		"matchID", "consumeString", "produceString", "consumeInteger", "produceInteger", 
		"namedPrimitive", "move", "peek", "next", "label", "produceVerbatim", 
		"quote"
	};

	@Override
	public String getGrammarFileName() { return "Giki.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public GikiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramElementsContext programElements() {
			return getRuleContext(ProgramElementsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GikiVisitor ) return ((GikiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); programElements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramElementsContext extends ParserRuleContext {
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ExpressionsContext expressions(int i) {
			return getRuleContext(ExpressionsContext.class,i);
		}
		public List<ExpressionsContext> expressions() {
			return getRuleContexts(ExpressionsContext.class);
		}
		public ProgramElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programElements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).enterProgramElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).exitProgramElements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GikiVisitor ) return ((GikiVisitor<? extends T>)visitor).visitProgramElements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramElementsContext programElements() throws RecognitionException {
		ProgramElementsContext _localctx = new ProgramElementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << CONSUMPTION_STRING) | (1L << PRODUCTION_STRING) | (1L << CONSUMPTION_INT) | (1L << PRODUCTION_INT) | (1L << SINGLE_QUOTE) | (1L << EXCLAMATION) | (1L << CARET) | (1L << NAMED_PRIMITIVE_RETURN) | (1L << NAMED_PRIMITIVE_VARIABLES) | (1L << NAMED_PRIMITIVE_EOF) | (1L << NAMED_PRIMITIVE_NIL) | (1L << KEYWORD_DEFINE) | (1L << KEYWORD_VAR) | (1L << KEYWORD_REST) | (1L << KEYWORD_FILE) | (1L << UNDERSCORE) | (1L << OPEN_SQ_BRACKET) | (1L << OPEN_PARENTHESIS) | (1L << OPEN_BRACKET) | (1L << ID) | (1L << VERBATIM))) != 0)) {
				{
				setState(86);
				switch (_input.LA(1)) {
				case KEYWORD_DEFINE:
					{
					setState(84); module();
					}
					break;
				case AT:
				case CONSUMPTION_STRING:
				case PRODUCTION_STRING:
				case CONSUMPTION_INT:
				case PRODUCTION_INT:
				case SINGLE_QUOTE:
				case EXCLAMATION:
				case CARET:
				case NAMED_PRIMITIVE_RETURN:
				case NAMED_PRIMITIVE_VARIABLES:
				case NAMED_PRIMITIVE_EOF:
				case NAMED_PRIMITIVE_NIL:
				case KEYWORD_VAR:
				case KEYWORD_REST:
				case KEYWORD_FILE:
				case UNDERSCORE:
				case OPEN_SQ_BRACKET:
				case OPEN_PARENTHESIS:
				case OPEN_BRACKET:
				case ID:
				case VERBATIM:
					{
					setState(85); expressions();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public Token selector;
		public ProgramElementsContext programElements() {
			return getRuleContext(ProgramElementsContext.class,0);
		}
		public TerminalNode ID() { return getToken(GikiParser.ID, 0); }
		public TerminalNode KEYWORD_DEFINE() { return getToken(GikiParser.KEYWORD_DEFINE, 0); }
		public ModuleModifiersContext moduleModifiers() {
			return getRuleContext(ModuleModifiersContext.class,0);
		}
		public TerminalNode CLOSE_PARENTHESIS() { return getToken(GikiParser.CLOSE_PARENTHESIS, 0); }
		public TerminalNode OPEN_PARENTHESIS() { return getToken(GikiParser.OPEN_PARENTHESIS, 0); }
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GikiVisitor ) return ((GikiVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_module);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91); match(KEYWORD_DEFINE);
			setState(92); moduleModifiers();
			setState(93); ((ModuleContext)_localctx).selector = match(ID);
			{
			setState(94); match(OPEN_PARENTHESIS);
			setState(95); programElements();
			setState(96); match(CLOSE_PARENTHESIS);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleModifiersContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(GikiParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GikiParser.ID, i);
		}
		public ModuleModifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleModifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).enterModuleModifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).exitModuleModifiers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GikiVisitor ) return ((GikiVisitor<? extends T>)visitor).visitModuleModifiers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleModifiersContext moduleModifiers() throws RecognitionException {
		ModuleModifiersContext _localctx = new ModuleModifiersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_moduleModifiers);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(98); match(ID);
					}
					} 
				}
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionsContext extends ParserRuleContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(GikiParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(GikiParser.SEMICOLON, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).enterExpressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).exitExpressions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GikiVisitor ) return ((GikiVisitor<? extends T>)visitor).visitExpressions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionsContext expressions() throws RecognitionException {
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expressions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); expression();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMICOLON) {
				{
				{
				setState(105); match(SEMICOLON);
				setState(107);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(106); expression();
					}
					break;
				}
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GikiVisitor ) return ((GikiVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); variableDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public Token isDeclaration;
		public Token hasInitialization;
		public DecisionContext value;
		public TerminalNode EQUALS() { return getToken(GikiParser.EQUALS, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public DecisionContext decision() {
			return getRuleContext(DecisionContext.class,0);
		}
		public TerminalNode ID() { return getToken(GikiParser.ID, 0); }
		public TerminalNode KEYWORD_VAR() { return getToken(GikiParser.KEYWORD_VAR, 0); }
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).exitVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GikiVisitor ) return ((GikiVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableDeclaration);
		int _la;
		try {
			setState(123);
			switch (_input.LA(1)) {
			case KEYWORD_VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(116); match(KEYWORD_VAR);
				setState(117); ((VariableDeclarationContext)_localctx).isDeclaration = match(ID);
				setState(120);
				_la = _input.LA(1);
				if (_la==EQUALS) {
					{
					setState(118); ((VariableDeclarationContext)_localctx).hasInitialization = match(EQUALS);
					setState(119); ((VariableDeclarationContext)_localctx).value = decision();
					}
				}

				}
				break;
			case AT:
			case CONSUMPTION_STRING:
			case PRODUCTION_STRING:
			case CONSUMPTION_INT:
			case PRODUCTION_INT:
			case SINGLE_QUOTE:
			case EXCLAMATION:
			case CARET:
			case NAMED_PRIMITIVE_RETURN:
			case NAMED_PRIMITIVE_VARIABLES:
			case NAMED_PRIMITIVE_EOF:
			case NAMED_PRIMITIVE_NIL:
			case KEYWORD_REST:
			case KEYWORD_FILE:
			case UNDERSCORE:
			case OPEN_SQ_BRACKET:
			case OPEN_PARENTHESIS:
			case OPEN_BRACKET:
			case ID:
			case VERBATIM:
				enterOuterAlt(_localctx, 2);
				{
				setState(122); assignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public Token id;
		public Token isAssignment;
		public DecisionContext value;
		public TerminalNode EQUALS() { return getToken(GikiParser.EQUALS, 0); }
		public DecisionContext decision() {
			return getRuleContext(DecisionContext.class,0);
		}
		public TerminalNode ID() { return getToken(GikiParser.ID, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GikiVisitor ) return ((GikiVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assignment);
		try {
			setState(129);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125); ((AssignmentContext)_localctx).id = match(ID);
				setState(126); ((AssignmentContext)_localctx).isAssignment = match(EQUALS);
				setState(127); ((AssignmentContext)_localctx).value = decision();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128); decision();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecisionContext extends ParserRuleContext {
		public PipelineContext value;
		public PipelineContext pipeline() {
			return getRuleContext(PipelineContext.class,0);
		}
		public DecisionTailContext decisionTail() {
			return getRuleContext(DecisionTailContext.class,0);
		}
		public DecisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decision; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).enterDecision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).exitDecision(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GikiVisitor ) return ((GikiVisitor<? extends T>)visitor).visitDecision(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecisionContext decision() throws RecognitionException {
		DecisionContext _localctx = new DecisionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_decision);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131); ((DecisionContext)_localctx).value = pipeline();
			setState(132); decisionTail();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecisionTailContext extends ParserRuleContext {
		public List<TerminalNode> PIPE() { return getTokens(GikiParser.PIPE); }
		public PipelineContext pipeline(int i) {
			return getRuleContext(PipelineContext.class,i);
		}
		public TerminalNode PIPE(int i) {
			return getToken(GikiParser.PIPE, i);
		}
		public List<PipelineContext> pipeline() {
			return getRuleContexts(PipelineContext.class);
		}
		public DecisionTailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decisionTail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).enterDecisionTail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).exitDecisionTail(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GikiVisitor ) return ((GikiVisitor<? extends T>)visitor).visitDecisionTail(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecisionTailContext decisionTail() throws RecognitionException {
		DecisionTailContext _localctx = new DecisionTailContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_decisionTail);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PIPE) {
				{
				{
				setState(134); match(PIPE);
				setState(135); pipeline();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PipelineContext extends ParserRuleContext {
		public PreFixOperationContext lhs;
		public PipelineFromContext hasFrom;
		public PipelineInterContext hasInters;
		public PipelineToContext hasTo;
		public List<PipelineInterContext> pipelineInter() {
			return getRuleContexts(PipelineInterContext.class);
		}
		public PipelineFromContext pipelineFrom() {
			return getRuleContext(PipelineFromContext.class,0);
		}
		public PipelineInterContext pipelineInter(int i) {
			return getRuleContext(PipelineInterContext.class,i);
		}
		public PipelineToContext pipelineTo() {
			return getRuleContext(PipelineToContext.class,0);
		}
		public PreFixOperationContext preFixOperation() {
			return getRuleContext(PreFixOperationContext.class,0);
		}
		public PipelineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipeline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).enterPipeline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GikiListener ) ((GikiListener)listener).exitPipeline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GikiVisitor ) return ((GikiVisitor<? extends T>)visitor).visitPipeline(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PipelineContext pipeline() throws RecognitionException {
		PipelineContext _localctx = new PipelineContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pipeline);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); ((PipelineContext)_localctx).lhs = preFixOperation();
			{
			setState(143);
			_la = _input.LA(1);
			if (_la==PIPELINE_FROM) {
				{
				setState(142); ((PipelineContext)_localctx).hasFrom = pipelineFrom();
				}
			}

			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PIPELINE) {
				{
				{
				setState(145); ((PipelineContext)_localctx).hasInters = pipelineInter();
				}
				}
				setState(150);
				_errHandler.sync(this);
